fix blog images collapsing in safari

--- a/src/styles/pages/runnable.scss
+++ b/src/styles/pages/runnable.scss
@@ -75,7 +75,9 @@
     position: relative;
 
     .img {
+      flex: 0 0 auto;
       height: 100%;
+      width: 100%;
     }
 
     .img:nth-child(1),
